apps/bithabit-api/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: bithabit-api-svc
  namespace: default
spec:
  type: ClusterIP
  ports:
    - port: 80
      targetPort: 8002
      protocol: TCP
  selector: {}
---
apiVersion: v1
kind: Endpoints
metadata:
  name: bithabit-api-svc
  namespace: default
subsets:
  - addresses:
      - ip: 10.0.0.61
    ports:
      - port: 8002
